--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <img src="images/banner.jpg" width="75%" alt="banner">
     <h1>Nirvay Rampurtab's Portal</h1>
     <h2>About Me</h2>
-    <p>I am a Cloud Architect in South Africa, Durban</p>
-    <p>I am currently completing a National Diploma in Network engineering and I hold 6 Oracle certifications in Cloud Architecture</p>
+    <p>I am a Certified Cloud Architect in South Africa, Durban</p>
+    <p>I am currently completing a National Diploma in Network engineering and I hold 6 Oracle certifications in Cloud Architecture and I am currently pursuing my microsoft certifications in Azure</p>
     <p>I have also recieved a Scholarship from Intel and was selected in the top 750 from over a million applicants</p>
     <p>I am also an International young professional member of the American Institute of Chemical Engineers</p>
     <h2>Credentials and Portfolio</h2>
